testsuite/tests/properties/invalid_and_or/test.out
== bool_eq.lkt ==
bool_eq.lkt:4:56: error: Expected type Bool, got Equation
4 |     @ignored fun f(b: Bool, e: Equation): Bool = b and e
  |                                                        ^


== eq_bool.lkt ==
eq_bool.lkt:4:50: error: Expected type Bool, got Equation
4 |     @ignored fun f(b: Bool, e: Equation): Bool = e and b
  |                                                  ^


== int_bool.lkt ==
int_bool.lkt:4:49: error: Expected type Bool, got Int
4 |     @ignored fun f(i: Int, e: Equation): Bool = i and e
  |                                                 ^


== logic_all.lkt ==
logic_all.lkt:4:63: error: Expected type Equation, got Bool
4 |     @ignored fun f(b1: Bool, b2: Bool, b3: Bool): Bool = %all(b1, b2, b3)
  |                                                               ^^


== logic_all_empty.lkt ==
logic_all_empty.lkt:4:34: error: at least one equation expected
4 |     @ignored fun f(): Equation = %all()
  |                                  ^^^^^^


== logic_any.lkt ==
logic_any.lkt:4:63: error: Expected type Equation, got Bool
4 |     @ignored fun f(b1: Bool, b2: Bool, b3: Bool): Bool = %any(b1, b2, b3)
  |                                                               ^^


== op_bool.lkt ==
op_bool.lkt:5:53: error: Expected type Bool, got Equation
5 |     fun f(lhs: Equation, rhs: Equation): Equation = lhs and lhs
  |                                                     ^^^


== op_eq.lkt ==
op_eq.lkt:5:41: error: Expected type Equation, got Bool
5 |     fun f(lhs: Bool, rhs: Bool): Bool = lhs %and lhs
  |                                         ^^^


lkt_compile: Done
